--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="search">
+    <input class="search-bar" type="search" placeholder="Search for movie...">
+    <button class="boton">SEARCH</button>
+</div>
