--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,6 +4,7 @@
         <span class="botones"><a routerLink = '/Log in' >LOG IN</a></span>
         <span class="botones"><a routerLink = '/Movies' >MOVIES</a></span>
         <span class="botones"><a routerLink = '/Register' >REGISTER</a></span>
+        <button class="botones" *ngIf="user" (click)="HandleOut()" >CLOSE ACCOUNT</button>
     </div>
     <div class="titulo">
         <h1>THE POPCORN SITE</h1>
