--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -27,3 +27,11 @@
     border-color: none;
 }
 
+.botones-close{
+    padding: 30px;
+    padding-bottom:20px;
+    margin: 20px;
+    background: navy;
+    border-radius: 12px;
+    border: none;
+}
