registro listo y detallitos

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <span class="botones"><a routerLink = '/Home' >HOME</a></span>
         <span class="botones"><a routerLink = '/Log in' >LOG IN</a></span>
         <span class="botones"><a routerLink = '/Movies' >MOVIES</a></span>
-        <span class="botones"><a routerLink = '/Register' >REGISTER</a></span>
+        <span class="botones" *ngIf="!user"><a routerLink = '/Register' >REGISTER</a></span>
         <button class="botones-close" *ngIf="user" (click)="HandleOut()" >CLOSE ACCOUNT</button>
     </div>
     <div class="titulo">
