--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,7 +12,7 @@
                 <input type="text" placeholder="Enter your password" formControlName="password" required><span class='bar'></span>
                 <label for=''>PASSWORD</label>
             </div>
-            <button class='send-button' type='button'>SUBMIT</button>
+            <button class='send-button' type='button'>LOG IN</button>
         </form>
     </div>
 </div>
