--- a/src/app/components/post-peliculas/post-peliculas.component.scss
+++ b/src/app/components/post-peliculas/post-peliculas.component.scss
@@ -33,6 +33,18 @@ span{
     font-weight: bold;
 }
 
-.favorite{
-    text-align: end;
+.botones{
+    padding: 10px;
+    padding-bottom:10px;
+    margin-top: 200px;
+    margin-left: 60px;
+    width: 90px;
+    height: 40px;
+    margin-top: 130px;
+    background: salmon;
+    color: white;
+    border-radius: 12px;
+    border: none;
+    font-size: 10px;
+    align-items: center;
 }
