--- a/src/app/pages/lista-pelicula/lista-pelicula.component.html
+++ b/src/app/pages/lista-pelicula/lista-pelicula.component.html
@@ -1,1 +1,16 @@
-<p>lista-pelicula works!</p>
+<div class="search">
+    <input class="search-bar" type="search" placeholder="Search for movie...">
+    <button class="boton">SEARCH</button>
+</div>
+
+<app-post-peliculas></app-post-peliculas>
+
+<div class="peliculas">
+    <ng-container *ngFor="let item of data.results">
+        <app-post-peliculas [post]="item"></app-post-peliculas>
+    </ng-container>
+</div>
+
+<div class="footer">
+    <button class="boton-next"(click)="Nextpage()">NEXT PAGE</button>
+</div>
