--- a/src/app/pages/reservar/reservar.component.html
+++ b/src/app/pages/reservar/reservar.component.html
@@ -1,1 +1,18 @@
-<p>reservar works!</p>
+<div class='form-square'>
+    <div class='form-square-background'>
+        <form class='loginform' [formGroup]="loginForm">
+            <div class='form-title'>
+                <span>RESERVAR</span>
+            </div>
+            <div class='group1'>
+                <input type="text" placeholder="Enter your email" formControlName="email" required><span class='bar'></span>
+                <label for=''>NOMBRE DE LA PELICULA</label>
+            </div>
+            <div class='group2'>
+                <input type="password" placeholder="Enter your password" formControlName="password" required><span class='bar'></span>
+                <label for=''>CANTIDAD DE BOLETOS</label>
+            </div>
+            <button class='send-button' type='button'>RESERVAR</button>
+        </form>
+    </div>
+</div>
