--- a/src/app/pages/lista-pelicula/lista-pelicula.component.html
+++ b/src/app/pages/lista-pelicula/lista-pelicula.component.html
@@ -12,5 +12,5 @@
 </div>
 
 <div class="footer">
-    <button class="boton-next"(click)="Nextpage()">NEXT PAGE</button>
+    <button class="boton-next">NEXT PAGE</button>
 </div>
